Fix on colors hard to read

--- a/common/common.scss
+++ b/common/common.scss
@@ -636,6 +636,9 @@ body[class*="archetype-"] .hero-container, body[class*="archetype-"] .hero {
   color: white;
 }
 .latest-topic-list {
+  .badge-wrapper.bar span.badge-category {
+    color: $primary;
+  }
   .table-heading {
     color: $primary;
   }
@@ -660,5 +663,25 @@ body[class*="archetype-"] .hero-container, body[class*="archetype-"] .hero {
 .more-topics {
   a {
     width: 100%
+  }
+}
+
+
+.select-kit.combo-box.category-drop.bar.has-selection .category-drop-header {
+  background: #212c47;
+  padding: 20px;
+  border: 0px;
+  border-radius: 6px;
+  box-shadow: rgba(0,0,0,0.07) 0px 4px 6px 0px;
+}
+.select-kit.combo-box .select-kit-row {
+  padding: 18px;
+}
+a.title:visited:not(.badge-notification), .topic-list .anon .main-link a.title:visited:not(.badge-notification), .anon .latest-topic-list-item .main-link a.title:visited:not(.badge-notification), .latest-topic-list-item .anon .main-link a.title:visited:not(.badge-notification) {
+  color: $primary;
+}
+.subcategories {
+  span.badge-category {
+    color: $header_background;
   }
 }
